2022-12-07T16:27:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640812586 # 682
* notice: last 14d: unq all: 3 10
* notice: prev accum: outdated-unq outdated-all / unq all: 409 649 / 416 660
* notice: next accum: outdated-unq outdated-all / unq all: 409 649 / 415 659
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -2 / 1 1
* notice: removed / changed dates: [] / [2022-11-23]

2022-12-07T08:24:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3637107652 # 681
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 409 649 / 414 657
* notice: next accum: outdated-unq outdated-all / unq all: 409 649 / 416 660
* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -1 / +2 +4 -0 -0 / 2 4
* notice: removed / changed dates: [] / [2022-11-23 2022-12-07]

2022-12-07T01:42:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3635065448 # 680
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 408 647 / 414 656
* notice: next accum: outdated-unq outdated-all / unq all: 409 649 / 414 657
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-22] / []

2022-12-06T16:27:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3631413377 # 679
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 408 647 / 414 657
* notice: next accum: outdated-unq outdated-all / unq all: 408 647 / 414 656
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-22]

2022-12-06T01:36:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3625622321 # 677