@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-07T16:27:29Z",
-  "count_outdated" : 649,
-  "uniques_outdated" : 409,
-  "count" : 659,
-  "uniques" : 415,
+  "timestamp" : "2022-12-08T01:38:15Z",
+  "count_outdated" : 652,
+  "uniques_outdated" : 411,
+  "count" : 662,
+  "uniques" : 417,
   "clones" : [
-    {
-      "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 1,
@@ -35,10 +28,10 @@
     },
     {
       "timestamp": "2022-12-07T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 5,
+      "count_minmax": [ 4, 5 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
