@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-11-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-11-24T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -24,8 +19,8 @@
     },
     {
       "timestamp": "2022-12-07T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 5,
+      "uniques": 3
     }
   ]
 }
