@@ -1,3 +1,11 @@
+2022-12-08T01:38:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3644428598 # 683
+* notice: last 14d: unq all: 3 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 409 649 / 415 659
+* notice: next accum: outdated-unq outdated-all / unq all: 411 652 / 417 662
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +3 +5 -0 -0 / 3 5
+* notice: removed / changed dates: [2022-11-23] / [2022-12-07]
+
 2022-12-07T16:27:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640812586 # 682
 * notice: last 14d: unq all: 3 10
